fixed top readability and removed debug features

--- a/project2/idea.css
+++ b/project2/idea.css
@@ -38,11 +38,8 @@
            padding-bottom: 1em;
            color: #007BFF;
 
-
-       }
-
-       #top img {
-           backdrop-filter: opacity(.5);
+           background-color: rgba(255, 255, 255, 0.6);
+           background-blend-mode: lighten;
        }
 
        #tempRes {
